@@ -142,12 +142,15 @@ rb_any_hash(VALUE a)
 	}
 	else if (FLONUM_P(a)) {
 	    /* prevent pathological behavior: [Bug #10761] */
-	    a = (st_index_t)rb_float_value(a);
+	    return rb_dbl_hash(rb_float_value(a));
 	}
 	hnum = rb_objid_hash((st_index_t)a);
     }
     else if (BUILTIN_TYPE(a) == T_STRING) {
 	hnum = rb_str_hash(a);
+    }
+    else if (BUILTIN_TYPE(a) == T_FLOAT) {
+	return rb_dbl_hash(rb_float_value(a));
     }
     else {
         hval = rb_hash(a);
